--- a/timer.html
+++ b/timer.html
@@ -15,8 +15,8 @@
                 <li><span id="minutes">00</span>:</li>
                 <li><span id="seconds">05</span></li>
             </ul>
-            <button id="timer-start">Старт</button>
-            <button id="timer-reset" disabled>Нулиране</button>
+            <button id="timer-start">Start</button>
+            <button id="timer-reset" disabled>Reset</button>
         </div>
     </div>
     <script src="https://kit.fontawesome.com/4ca92add59.js" crossorigin="anonymous"></script>
