--- a/timer.html
+++ b/timer.html
@@ -19,7 +19,7 @@
             <button id="timer-reset" disabled>Reset</button>
         </div>
     </div>
-    <script src="https://kit.fontawesome.com/4ca92add59.js" crossorigin="anonymous"></script>
+    <!-- here you can put your fontawesome kit -->
     <script src="timer.js"></script>
 </body>
 </html>
